# guideng

./: .gitignore  DEPLOY_LOCAL.md  DEPLOY_LOCAL_EN.md  LICENSE  README.md  README_EN.md  build-and-push.sh  docker-compose.yml  nginx.conf  zeabur.yaml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/src/: main.tsx  styles.css
server/: Cargo.toml  Dockerfile
server/src/: main.rs
